Fix overflow on dm search

--- a/app/assets/stylesheets/modals/create_channel.scss
+++ b/app/assets/stylesheets/modals/create_channel.scss
@@ -133,6 +133,10 @@
 
 .littleholder {
   padding: 15px;
+  width: 590px;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  display: flex;
 }
 
 .selected-user {
